Compiler/tests/good/var2.nx
type t = [0 .. 3];
val x : t  = 3;

printn(x);
