Compiler/tests/bad/bool6.nx
type t = [0 .. 1];

printn(1<2 && t);
